...
    <string name="title_activity_client_profile" translatable="false">ClientProfile</string>
    <string name="title_activity_save" translatable="false">SaveTicket</string>
    <string name="title_activity_ticket_detail" translatable="false">TicketDetail</string>
    <string name="create_ticket_disabled_message" translatable="false">Disabled</string>
    <string name="static_shortcut_long_label" translatable="false">Create a new ticket</string>
    <string name="static_shortcut_short_label" translatable="false">Create ticket</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>

    <string name="title_activity_main" translatable="false">Faveo</string>
    <string name="create_ticket">Create ticket</string>
    <string name="my_tickets">My tickets</string>
    <string name="unassigned_tickets">Unassigned tickets</string>
    <string name="closed_tickets">Closed tickets</string>
    <string name="client_list">Client list</string>
    <!--<string name="setting">Settings</string>-->
    <string name="about">About</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_notification">Notifications</string>

    <string name="search_hint">Search…</string>
    <string name="just_now">Just now</string>
    <string name="title_activity_create_ticket" translatable="false">CreateTicketActivity</string>
    <string name="title_activity_search" translatable="false">SearchActivity</string>
    <string name="blue_name" translatable="false">blue</string>
...
    <string name="subject">Reply Content</string>
    <string name="Subject">Subject</string>
    <string name="interNalNote">Internal Note</string>
    <string name="version_2_0" translatable="false">Version 2.0</string>
    <string name="faveo_helpdesk" translatable="false">Faveo HELPDESK</string>
    <string name="faveo_content">Headquartered in Bangalore, Faveo Helpdesk provides Businesses with an automated Helpdesk system to manage customer support.  The word Faveo comes from Latin which means to be favourable. Which truly highlights vision and the scope as well as the functionality of the product that Faveo is. It is specifically designed to cater the needs of startups and SME’s empower
    <string name="website">Website</string>
    <string name="faveo_url" translatable="false">www.faveohelpdesk.com</string>
    <string name="not_available">Not Available</string>
    <string name="source">Source</string>
    <string name="due_date">Due Date</string>
    <string name="created_date">Created Date</string>
    <string name="assigneeName">Agent Name</string>

    <string name="save">Save Changes</string>
    <string name="trash">Trash</string>
    <string name="logout">Logout</string>
    <string name="ticket_list">Ticket list</string>
    <string name="no_records">No Records!</string>
    <string name="no_tickets">No tickets found!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="send_crash_reports">Send crash reports</string>
    <string name="crash_reports">CRASH REPORTS</string>
...
    <string name="managingTickets">Managing tickets in android app</string>
    <string name="userDirectory">How to use the user directory</string>
    <string name="userAndAgent">Users and agents</string>
    <string name="other">Other features</string>
    <string name="someOtheroptions">How to use some other features</string>
    <string name="loggingIn">Logging in and logging out of the android app</string>
    <string name="settings">Settings</string>
    <string name="logginginandout">Logging in and logging out of the Android app</string>
    <string name="LoggingIn">1. Logging in and logging out</string>
    <string name="logincontent">The Android app for Faveo lets you support your customer anytime from your smartphone or tablet
        device.This solution will be a step-by-step walkthrough explaining to you everything you can do with the app. </string>
    <string name="toLogIn">To log in into your app you need to use your helpdesk domain name,your agent email address and password.
        Your domain name would be just the vanity URL where your helpdesk is present just an example support.yourcompany.com.</string>
...
    <string name="adding_collaborator">Adding collaborator</string>
    <string name="subjectExceed">Subject must not exceed 200 characters</string>
    <string name="discard">Discard changes?</string>
    <string name="please_enter_yes_or_no">Please enter yes or no</string>
    <string name="user_collaborator">Are you sure you want to remove this user as collaborator?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="version">Version</string>
    <string name="bannedOrdeactivated">Sorry!This account is either banned or deactivated,please contact the admistrator</string>
    <string name="inactiveagent">This account is currently inactive!</string>
    <string name="sort">sort</string>
    <string name="sorting_type">Sorting type</string>
    <string name="due_by_time">Due by time</string>
...
