...
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:theme="@style/MyMaterialTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#154c66"
            app:popupTheme="@style/MyMaterialTheme.PopupOverlay">

            <RelativeLayout
...
                <!--android:text="@string/send_crash_reports"-->
                <!--android:textColor="@color/black"-->
                <!--android:textSize="14sp"-->
                <!--android:textStyle="bold" />-->

            <!--<android.support.v7.widget.SwitchCompat-->
                <!--android:id="@+id/switch_crash_reports"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:checked="true"-->
                <!--app:theme="@style/SwitchStyle" />-->

        <!--</LinearLayout>-->
...
