...

                </ListView>


            </LinearLayout>
            <!--<RelativeLayout-->
            <!--android:id="@+id/inbox_tickets"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="64dp"-->
            <!--android:background="@color/colorAccent">-->

            <!--<ImageView-->
            <!--android:id="@+id/imageView2"-->
...
            <!--android:textColor="@color/black"-->
            <!--android:textSize="16sp" />-->

            <!--</RelativeLayout>-->

            <!--<RelativeLayout-->
            <!--android:id="@+id/trash_tickets"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="64dp"-->
            <!--android:background="@color/colorAccent">-->

            <!--<TextView-->
            <!--android:id="@+id/trash_tickets_count"-->
...
